--- a/Editor/Kogane.CopyAssetPathMultipleMenuItem.asmdef
+++ b/Editor/Kogane.CopyAssetPathMultipleMenuItem.asmdef
@@ -1,5 +1,6 @@
 {
-    "name": "UniAssetPathMultipleCopyer",
+    "name": "Kogane.CopyAssetPathMultipleMenuItem",
+    "rootNamespace": "",
     "references": [],
     "includePlatforms": [
         "Editor"
