--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "com.baba-s.uni-asset-path-multiple-copyer",
-    "displayName": "UniAssetPathMultipleCopyer",
+    "name": "com.baba-s.kogane-copy-asset-path-multiple-menu-item",
+    "displayName": "Kogane Copy Asset Path Multiple Menu Item",
     "version": "1.0.0",
-    "unity": "2019.2",
+    "unity": "2022.1",
     "author": "baba-s",
     "description": "",
     "dependencies": {}
